// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Snapshots ClassName 1`] = `
<span
  className="sc-bdfBwQ FAtxg className"
>
  hei
</span>
`;

exports[`Text Snapshots No props 1`] = `
<span
  className="sc-bdfBwQ FAtxg"
>
  This is a Text
</span>
`;

exports[`Text Snapshots no Children 1`] = `
<span
  className="sc-bdfBwQ FAtxg"
/>
`;
